--- a/.travis.yml
+++ b/.travis.yml
@@ -57,3 +57,11 @@ addons:
     build_command_prepend: "cov-configure --comptype gcc --compiler arm-linux-gnueabihf-gcc --template; cov-configure --comptype gcc --compiler aarch64-linux-gnu-gcc --template"
     build_command: "unused"
     branch_pattern: coverity_scan.*
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  on:
+    branch: tmp
+
