--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ script:
   - if [ ${COVERITY_SCAN_BRANCH} != 1 ];
         then ci/build-all-configs.sh;
     fi
+  - ./scripts/script_with_folds.sh
 
 addons:
   coverity_scan:
@@ -58,10 +59,12 @@ addons:
     build_command: "unused"
     branch_pattern: coverity_scan.*
 
+  travis_fold:start:foo
 deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
   on:
     branch: tmp
+  travis_fold:end:foo
 
