--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,8 @@ addons:
     build_command: "unused"
     branch_pattern: coverity_scan.*
 
-travis_fold:start:"deploy.part1"
+script:
+  - echo 'deployPending' && echo -en 'travis_fold:start:script.deployPending\\r'
   travis_time_start
 deploy:
   provider: pages
@@ -68,5 +69,6 @@ deploy:
   on:
     branch: tmp
   travis_time_finish
-travis_fold:end:"deploy.part1" 
+script:
+  - echo -en 'travis_fold:end:script.deployPending\\r'
 
