--- a/.travis.yml
+++ b/.travis.yml
@@ -66,6 +66,7 @@ addons:
     build_command: "unused"
     branch_pattern: coverity_scan.*
 
+# GitHub Pages Deployment
 deploy:
   provider: pages
   skip_cleanup: true
