--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ after_success: |
     # This generates a `web` directory containing the website.
     make web
     cd web
-    git init
+    git init -q
     git checkout -b gh-pages
     git add .
     git -c user.name='travis' -c user.email='travis' commit -m init
