--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ after_success: |
     cd web
     git init -q
     git checkout -b gh-pages
-    git add .
+    git add . > /dev/null
     git -c user.name='travis' -c user.email='travis' commit -m init
     # Make sure to make the output quiet, or else the API token will leak!
     # This works because the API key can replace your password.
