--- a/.travis.yml
+++ b/.travis.yml
@@ -71,11 +71,11 @@ after_success: |
   if [ -n "$GITHUB_TOKEN" ]; then
     cd "$TRAVIS_BUILD_DIR"
     # This generates a `web` directory containing the website.
-    make web
+    mkdir web
     cd web
     git init -q
     git checkout -b gh-pages
-    git add . > /dev/null
+    git add . &> /dev/null
     git -c user.name='travis' -c user.email='travis' commit -m init
     # Make sure to make the output quiet, or else the API token will leak!
     # This works because the API key can replace your password.
