--- a/.travis.yml
+++ b/.travis.yml
@@ -71,8 +71,8 @@ after_success: |
   if [ -n "$GITHUB_TOKEN" ]; then
     cd "$TRAVIS_BUILD_DIR"
     # This generates a `web` directory containing the website.
-    mkdir web
-    cd web
+    #mkdir web
+    #cd web
     git init -q
     git checkout -b gh-pages
     git add . &> /dev/null
